tests/ui/generic-associated-types/issue-90014-tait.stderr
error: unconstrained opaque type
  --> $DIR/issue-90014-tait.rs:15:20
   |
LL |     type Fut<'a> = impl Future<Output = ()>;
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `Fut` must be used in combination with a concrete type within the same impl

error[E0308]: mismatched types
  --> $DIR/issue-90014-tait.rs:18:9
   |
LL |     type Fut<'a> = impl Future<Output = ()>;
   |                    ------------------------ the expected future
LL |
LL |     fn make_fut<'a>(&'a self) -> Self::Fut<'a> {
   |                                  ------------- expected `Foo<'_>::Fut<'a>` because of return type
LL |         async { () }
   |         ^^^^^^^^^^^^ expected future, found `async` block
   |
   = note: expected opaque type `Foo<'_>::Fut<'a>`
            found `async` block `{async block@$DIR/issue-90014-tait.rs:18:9: 18:14}`
note: this item must have a `#[defines(Foo<'_>::Fut)]` attribute to be able to define hidden types
  --> $DIR/issue-90014-tait.rs:17:8
   |
LL |     fn make_fut<'a>(&'a self) -> Self::Fut<'a> {
   |        ^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
